1999 Jan 8

 Ilya Zakharevich:
  Newer perls: Add PERL_POLLUTE and dTHR.

1998 Nov 10 
This version of DProf should work with older Perls too, but to get
full benefits some patches to 5.004_55 are needed.  Patches take effect 
after new version of Perl is installed, and DProf recompiled.

Without these patches the overhead of DProf is too big, thus the statistic
may be very skewed.

Oct 98:
 Ilya Zakharevich:
  DProf.xs
    - correct defstash to PL_defstash
    - nonlocal exits work
  dprofpp
    - nonlocal exits work
  DProf.pm
    - documentation updated
  t/test6.*
    - added

Nov-Dec 97:
 Jason E. Holt and Ilya Zakharevich:
  DProf.xs
    - will not wait until completion to write the output, size of buffer
      regulated by PERL_DPROF_BUFFER, default 2**14 words;

 Ilya Zakharevich:
  dprofpp
    - smarter in fixing garbled profiles;
    - subtracts DProf output overhead, and suggested profiler overhead;
    - new options -A, -R, -g subroutine, -S;
    - handles 'goto' too;
  DProf.xs
    - 7x denser output (time separated from name, ids for subs);
    - outputs report-write overhead;
    - optional higher-resolution (currently OS/2 only, cannot grok VMS code);
    - outputs suggested profiler overhead;
    - handles 'goto' too;
    - handles PERL_DPROF_TICKS (on OS/2, VMS may be easily modified too)

Jun 14, 97 andreas koenig adds the compatibility notes to the README
and lets the Makefile.PL die on $] < 5.004.

Jun 06, 97 andreas koenig applies a patch by gurusamy sarathy because
Dean is not available for comments at that time. The patch is available
from CPAN in the authors/id/GSAR directory for inspection.

Sep 30, 96 dmr
  DProf.xs
  - added Ilya's patches to fix "&bar as &bar(@_)" bug.  This also fixes
    the coredumps people have seen when using this with 5.003+.
  DProf.pm
  - updated manpage
  t/bug.t
  - moved to test5
  Makefile.PL
  - remove special case for bug.t

Jun 26, 96 dmr
  dprofpp.PL